Irish Music Analysis notebook
Analyzing the Evolution of Irish Folk Traditional music

--- a/failte_final.ipynb
+++ b/failte_final.ipynb
@@ -58,9 +58,9 @@
    "outputs": [],
    "source": [
     "# Get the tune, recordjing and alias data into dataframes \n",
-    "tuneData = pd.read_json('/home/neehaarika/Desktop/data/tunes.json')\n",
-    "aliasData = pd.read_json('/home/neehaarika/Desktop/data/aliases.json')\n",
-    "recordData = pd.read_json('/home/neehaarika/Desktop/data/recordings.json')"
+    "tuneData = pd.read_json('.../data/tunes.json')\n",
+    "aliasData = pd.read_json('.../data/aliases.json')\n",
+    "recordData = pd.read_json('.../data/recordings.json')"
    ]
   },
   {
