--- a/failte_final.ipynb
+++ b/failte_final.ipynb
@@ -178,6 +178,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "At this point, it is obvious from the 'abc' column that the user-submitted notes are going to need a lot of processing before they can be analyzed, as they have a lot extraneous characters that we aren't interested in. A great way to extract the characters that we *are* interested in, is by using Regex, specifically the *re* package. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -264,6 +271,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p> Now that we have the \"standardized\" notes, we can go ahead and substitute them with numbers to better visualize and  understand the note changes. I've picked the jig called \"Morrison's Jig\" and used a heatmap to help visualize how different versions might look. Note that the overarching structure of the tune is similar; it's the individual notes that vary. This makes these individual versions sound the same, yet slightly different. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -286,7 +300,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -339,6 +355,13 @@
     "    df2 = df1.select_dtypes(['number']).fillna(0) \n",
     "    df_var=df2.var(axis=0).to_frame().transpose() \n",
     "    return df_var"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p> **Question:** It is noticeable that the more diffused notes are towards the end of the tune. Which section of the tune has the most variance in the notes? It is possible to chart the average variance of each note across tunes to help answer that question. In the graph below, it would appear that the end of the tune is the most likely to be tinkered with. "
    ]
   },
   {
@@ -407,6 +430,13 @@
    "metadata": {},
    "source": [
     "## Typical structure of an Irish tune across the years "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p> **Question**: What would it look like if I plotted the average of all the tunes through the years? Is there such a thing as a \"typical structure\" of an Irish tune? From the plot below, it would appear so. Note how the high notes are hit towards the end of the tune. And how the \"average\" Irish jig has maintained its structure through the years. "
    ]
   },
   {
@@ -490,6 +520,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question:** How have the noted \"shifted\" across versions? Have they tended to rise or fall? And has that trend been maintained? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p> In the first graph below, from version 1 to version 2 of all tunes, note that the end sections of the tunes have majorly tended to fall in note-level, at least through the first decade. I've added the shifts between the next versions as well, in the following graphs. It's interesting to note the \"pockets\" of most change across the years and across tune versions. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 80,
    "metadata": {},
@@ -528,7 +572,9 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -676,6 +722,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p> Another metric of interest to me is the number of changes in direction in a tune, somthing that lends a tune a \"rollicky\" sound. Has it increased or decreased over the years? We can use Regex again to find out. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
@@ -718,45 +771,9 @@
     "        df_diff['rf'] = pd.Series(n_dc)  \n",
     "        df_diff['year'] = tuneset['date'].dt.year.iloc[0] \n",
     "        df_diff['version'] = 1 \n",
-    "        dirchngs = dirchngs.append(df_diff, ignore_index=True) \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get the number of direction changes for the second versions of all tunes \n",
-    "for t in tunes: \n",
-    "    tunelen = jigdf[jigdf['tune']==t] \n",
-    "    if len(tunelen.index)>1: # CHange this for version number\n",
-    "        tuneset = jigdf[jigdf['tune']==t].iloc[[1]] # CHange this for version number   \n",
-    "        df_diff = pd.DataFrame(columns=['rf', 'year']) \n",
-    "        n_dc=count_direction_change(tuneset) \n",
-    "        df_diff['rf'] = pd.Series(n_dc)  \n",
-    "        df_diff['year'] = tuneset['date'].dt.year.iloc[0] \n",
-    "        df_diff['version'] = 2 \n",
-    "        dirchngs = dirchngs.append(df_diff, ignore_index=True) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get the number of direction changes for the third versions of all tunes \n",
-    "for t in tunes: \n",
-    "    tunelen = jigdf[jigdf['tune']==t] \n",
-    "    if len(tunelen.index)>2: # CHange this for version number\n",
-    "        tuneset = jigdf[jigdf['tune']==t].iloc[[2]] # CHange this for version number   \n",
-    "        df_diff = pd.DataFrame(columns=['rf', 'year']) \n",
-    "        n_dc=count_direction_change(tuneset) \n",
-    "        df_diff['rf'] = pd.Series(n_dc)  \n",
-    "        df_diff['year'] = tuneset['date'].dt.year.iloc[0] \n",
-    "        df_diff['version'] = 3 \n",
-    "        dirchngs = dirchngs.append(df_diff, ignore_index=True) "
+    "        dirchngs = dirchngs.append(df_diff, ignore_index=True) \n",
+    "\n",
+    "# Do the same for the second and third versions of all tunes "
    ]
   },
   {
