--- a/failte_final.ipynb
+++ b/failte_final.ipynb
@@ -811,6 +811,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p> Here were all the resources I used in the making of this analysis: \n",
+    "1. Tunes and Community Forum: https://thesession.org/\n",
+    "2. Sessions or Live Irish Trad Music: https://thesession.org/sessions \n",
+    "3. API: https://thesession.org/api\n",
+    "4. Github data: https://github.com/adactio/TheSession-data \n",
+    "5. Regex for Python: https://docs.python.org/3/library/re.html "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
